fix: update aside z-index

--- a/assets/stylus/global.styl
+++ b/assets/stylus/global.styl
@@ -127,6 +127,7 @@ ul
 		top 0
 		right -($aside-width)
 		bottom 0
+		z-index 100
 		overflow hidden auto
 		flex-shrink 0
 		width $aside-width
